# CoffeeChat-Win

./: .gitignore  .gitmodules  README.md
win/: README.MD  all.sln  cchat.sln
win/cim/: CMakeLists.txt  cim.vcxproj  main.cpp
win/cim/base/: Exception.cpp  Exception.h  Log.cpp  Log.h  base.vcxproj  noncopyable.h
win/cim/core/: cim.h  cim_conn_base.h  cim_def.h  cim_tcp_client.cpp  cim_tcp_client.h  core.vcxproj  event_loop.cpp  event_loop.h  tcp_client.h
win/cim/core/pb/: CIM.Def.pb.cc  CIM.Def.pb.h  CIM.List.pb.h
win/pb/: create.bat
win/src/chatkit/: chatkit.vcxproj  chatkit.vcxproj.filters  cim.cpp  cim.h  cim_def.h  dllmain.cpp  main.cpp
win/src/chatkit/base/: Exception.h  Log.cpp  Log.h  noncopyable.h
win/src/chatkit/cim/: cim.cpp  cim.h  cim_def.cpp  cim_def.h  cim_dll.h  cim_helper.cpp  cim_helper.h
win/src/chatkit/core/: callback.h  cim_conn_base.h  client.cpp  client.h  im_user_manager.cpp  im_user_manager.h  user_manager.cpp  user_manager.h
win/src/chatkit/crypt/: md5.cpp  md5.h  test.cpp
win/src/chatkit/pb/: CIM.Def.pb.cc  CIM.Def.pb.h  CIM.Friend.pb.cc  CIM.Group.pb.cc  CIM.Group.pb.h  CIM.List.pb.cc  CIM.Login.pb.cc  CIM.Login.pb.h  CIM.Message.pb.cc  CIM.Message.pb.h  CIM.Voip.pb.cc  CIM.Voip.pb.h
win/src/chatkit/test/: test_client.cpp  test_client.h  test_user_manager.cpp
win/src/chatkittest/: chatkittest.vcxproj  chatkittest.vcxproj.filters  test.cpp
win/src/cim/: cim.h  cim_core.vcxproj  cim_core.vcxproj.filters
win/src/client/: basic.rc  client.vcxproj  client.vcxproj.filters  main.cpp  main.h
win/src/client/helper/: config.h  (+1 more)
(+54 files in other folders)
